--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,65 +1,106 @@
 .divider-contain {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px;
 }
 
 .divider-contain .line {
-    width: 20%;
-    height: 3px;
-    background-color: #EEC643;
-    margin-bottom: 10px;
-    margin-top: 10px;
+  width: 20%;
+  height: 3px;
+  background-color: #eec643;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .divider-contain .line2 {
-    width: 25%;
-    height: 3px;
-    background-color: #EEC643;
+  width: 25%;
+  height: 3px;
+  background-color: #eec643;
 }
 
 .hiw-contain {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 90px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 90px;
 }
 
 .hiw-contain .hiwCard {
-    width: 30%;
-    background-color: #011638;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 10px;
-    text-align: center;
-    box-shadow: 1px 15px 15px 5px #011638;
-    border-radius: 10px;
+  width: 30%;
+  background-color: #011638;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 10px;
+  text-align: center;
+  box-shadow: 1px 15px 15px 5px #011638;
+  border-radius: 10px;
 }
 
 .hiw-contain .hiwCard:hover {
-    cursor: pointer;
-    transform: translateY(-5px);
-    transition: all 0.3s ease;
+  cursor: pointer;
+  transform: translateY(-5px);
+  transition: all 0.3s ease;
 }
 
 .hiw-contain .hiwCard i {
-    color: #EEC643;
-    font-size: 25px;
-    margin-bottom: 15px;
+  color: #eec643;
+  font-size: 25px;
+  margin-bottom: 15px;
 }
 
 #jobs-home-contain {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
 #jobs-home-contain .job-item {
-    padding: 20px 20px;
-    box-shadow: 0 2px 4px #eec643;
-    background-color: #011638;
+  padding: 20px 20px;
+  box-shadow: 0 2px 4px #eec643;
+  background-color: #011638;
+}
+
+.vm-contain {
+  width: 25%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  text-align: center;
+  border: none;
+  border-radius: 10px;
+  background-color: #eec643;
+  padding: 20px 10px;
+}
+
+.vm-contain a {
+  display: block;
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+}
+
+@media screen and (max-width: 768px) {
+  .hiw-contain {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .hiw-contain .hiwCard {
+    width: 70%;
+    margin-bottom: 20px;
+  }
+
+  #jobs-home-contain .job-item {
+    padding: 15px 15px;
+  }
+
+  .vm-contain {
+    width: 80%;
+  }
 }
